fixed image handling, need to finalize testing using postman